<resources>
    <string name="app_name">Love Advice 2.0</string>
    <string name="copyright">Copyright © Love Advice. All Rights Reserved.</string>
    <string name="exit_app">Exit</string>
    <string name="about_app">About</string>
    <string name="user">Student Number:</string>
    <string name="pass">Password:</string>
    <string name="remind">Reminders</string>
    <string name="add_rem">Add Reminders</string>
    <string name="studno">Student Number: (e.g 0082016XXXX)</string>
    <string name="lname">Last name:</string>
    <string name="fname">First name:</string>
    <string name="mname">Middle name:</string>
    <string name="program">Program: MAWD, STEM or DIGAR</string>
    <string name="gender">Gender: Male or Female</string>
    <string name="err_msg_user">Enter your student number</string>
    <string name="err_msg_pass">Enter the password</string>
    <string name="title_activity_main">Love Advice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_text">No Internet Connection</string>
    <string name="wifi_paragraph">You are offline. Please check your internet connection and try again.</string>
    <string name="search_message">Search...</string>
    <string name="Home">Home</string>
    <string name="Categories">3 Major Categories</string>
    <string name="Glossary">Glossary</string>
    <string name="About">About App</string>
    <string-array name="QuotesList">
        <item>"Dont be afraid to fail. Be afraid not to try."</item>
        <item>"Cherish your human connections your relationships with friends and family."</item>
        <item>"Its not what we have in life. But who we have in our life matters."</item>
        <item>"Family is where life begins and love never ends."</item>
        <item>"Family is not an important thing. Its everything."</item>
        <item>"If you want something you never had. You have to do something you have never done."</item>
        <item>"Family means no one gets left behind or forgotten."</item>
        <item>"When trouble comes its your family that supports you."</item>
        <item>"A real friend is one who walks in when the rest of the world walks out."</item>
        <item>"True friendship comes when the silence between two people is comfortable."</item>
        <item>"A true friend never gets in your way unless you happen to be going down."</item>
        <item>"Friendship is the only cement that will ever hold the world together."</item>
        <item>"Friends are those rare people who ask how we are and then wait to hear the answer."</item>
        <item>"Our family is a circle of strength of love with every birth and every union the circle grows."</item>
        <item>"The love of a family is one of the greatest blessing in our life.</item>
        <item>"Family is what happens when two people fall in love."</item>
        <item>"A friend knows the song in my heart and sings it to me when my memory fails."</item>
        <item>"Once in a while right in the middle of an ordinary life love gives us a fairy tale."</item>
        <item>"The best time to make friends is before you need them."</item>
        <item>"Sticking with your family is what makes it a family."</item>
        <item>"I would rather walk with a friend in the dark than alone in the light."</item>
        <item>"The strength of a nation derives from the integrity of the home."</item>
        <item>"If you want to change the world, go home and love your family."</item>
        <item>"Home is where you are loved the most and act the worst."</item>
        <item>"A friend who understands your tears is much more valuable than a lot of friends who only know your smile."</item>
        <item>"Blood makes you related. Loyalty makes you family."</item>
        <item>"Life is an awful ugly place to not have a best friend."</item>
        <item>"You dont choose your family. They are Gods gift to you as you are to them."</item>
        <item>"Only a true best friend can protect you from your immortal enemies."</item>
        <item>"Family, friends and relationships are the blessings of the God. They are the best way to access God."</item>
        <item>"Life without friendship is like the sky without the sun."</item>
        <item>"Real family does not come from your blood. It is the people standing beside you when no one else is."</item>
        <item>"Friends find the sweetest sense of happiness comes from simple being together."</item>
        <item>"Your family is the best team you could ever have."</item>
        <item>"Friends can make you laugh like no one else can."</item>
        <item>"Often we think of love in terms of people, whether they are friends, family, or romantic partners."</item>
        <item>"People with the greatest advice usually have the most problems."</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">
        This Love Advice Android Application
        crafted with love by our IT Project team
        for the Senior High Students of
        STI Academic Center Caloocan taking up programs MAWD, STEM and DIGAR and also
        a requirements for IT Special Project.
    </string>
    <string-array name="FamilyCategory">
        <item>"You are more important than your problems."</item>
        <item>"If you do not stand for something, you will fall for anything."</item>
        <item>"Find the one who makes your heart smile."</item>
        <item>"Family are the ones who would do anything to see you smile and who loves you."</item>
        <item>"A family is a little world created by love."</item>
        <item>"People come and go in our lives, but a beauty of life is that our family is always there."</item>
        <item>"We do not need sugar, flour or rice or anything else. We just want to see our dear ones."</item>
        <item>"Family is the most important thing in the world."</item>
        <item>"Family, we may not have it all together but together we have it all."</item>
        <item>"Family is like music, some high notes, some low notes, but always a beautiful song."</item>
        <item>"I believe the world is one big family, and we need to help each others."</item>
        <item>"Family is not always about blood, sometimes its about who is there to support you when you need them."</item>
        <item>"It does not matter what kind of problems a family is having, it should always stay in the family."</item>
        <item>"The best way to resolve any problem in the human world is for all sides to sit down and talk."</item>
        <item>"You dont choose your family. They are Gods gift to you, as you are to them."</item>
    </string-array>
    <string-array name="FriendsCategory">
        <item>"Be with someone who brings out the best in you."</item>
        <item>"A friend is the one that knows you as you are and understands where you have been."</item>
        <item>"Best friends make the good times better and the hard times easier."</item>
        <item>"A true friend is the best Possession."</item>
        <item>"Friends are Gods way of taking care of us."</item>
        <item>"Friendship is one mind in two bodies."</item>
        <item>"Keep your friends close, your enemies even closer."</item>
        <item>"No better relation than a prudent and faithful friend."</item>
        <item>"There is nothing on this earth more to be prized than true friendship."</item>
        <item>"Friendship is always a sweet responsibility, never an opportunity."</item>
        <item>"A friend is someone who gives you total freedom to be yourself."</item>
        <item>"Friends show their love in times of trouble, not in happiness."</item>
        <item>"One of the most beautiful qualities of true friendship is to understand and to be understood."</item>
        <item>"A real friend is one who walks in when the rest of the world walks out."</item>
        <item>"No person is your friend who demands your silence, or denies your right to grow."</item>
    </string-array>
    <string-array name="SpecialCategory">
        <item>"A person who loves you truly will never let you go whatever the situation is."</item>
        <item>"A good relationship consists of two people who accept each others past and support each others future."</item>
        <item>"Love is not love until you give it away."</item>
        <item>"If you cannot be happy and content by yourself then you should not be in a relationship."</item>
        <item>"Relationships are the flavors of life."</item>
        <item>"You can tell how often a person thinks of you by how often they tell you they think of you."</item>
        <item>"Never love anybody that treats you like you are ordinary."</item>
        <item>"If your love for another person does not include loving yourself then your love is incomplete."</item>
        <item>"Love cannot live where there is no trust."</item>
        <item>"Do not settle for a relationship that would not let you be yourself."</item>
        <item>"Each relationship nurtures a strength or weakness within you."</item>
        <item>"The best person to talk to about the problems in your relationship is the person you are in a relationship with."</item>
        <item>"Assumptions are the termites of relationships."</item>
        <item>"In general, the problem in a relationship is when the couple stagnate."</item>
        <item>"Problems in relationship occur because each person is concentrating on what is missing in the other person."</item>
    </string-array>
</resources>