<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dioncamposano17.loveadvice20.RegisterActivity">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/lname"
                android:text="Camposano"
                android:inputType="text|textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/linearLayout1"
    android:layout_alignLeft="@+id/linearLayout1"
    android:layout_alignStart="@+id/linearLayout1">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/fname"
            android:text="Dion"
            android:inputType="text|textPersonName|textCapWords"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_middlename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignStart="@+id/linearLayout2">

            <EditText
                android:id="@+id/input_middlename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/mname"
                android:text="Agno"
                android:inputType="text|textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@animator/gradientnavy"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3">

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/input_layout_program"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/linearLayout2"-->
            <!--android:layout_alignLeft="@+id/linearLayout2"-->
            <!--android:layout_alignStart="@+id/linearLayout2">-->

            <!--<EditText-->
                <!--android:id="@+id/input_program"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:singleLine="true"-->
                <!--android:hint="@string/program"-->
                <!--android:inputType="text"-->
                <!--android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radioG2">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioMawd"
                android:layout_marginLeft="10dp"
                android:text="MAWD"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioStem"
                android:layout_marginLeft="20dp"
                android:text="STEM"/>
            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioDigar"
                android:layout_marginLeft="20dp"
                android:text="DIGAR"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@animator/gradientblue"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4">

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/input_layout_gender"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/linearLayout2"-->
            <!--android:layout_alignLeft="@+id/linearLayout2"-->
            <!--android:layout_alignStart="@+id/linearLayout2">-->

            <!--<EditText-->
                <!--android:id="@+id/input_gender"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:singleLine="true"-->
                <!--android:hint="@string/gender"-->
                <!--android:inputType="text"-->
                <!--android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radioG">
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:text="Male"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:text="Female"
            android:id="@+id/radioFemale" />
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:id="@+id/imageView4"
        android:src="@drawable/advice_img"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_studno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_studno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/studno"
                android:inputType="numberDecimal|number"
                android:text="00820161234"
                android:digits="0123456789 "/>
        </android.support.design.widget.TextInputLayout>

        <requestFocus />

    </LinearLayout>

    <TextView
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:text="Fill up here to register:"
        android:textColor="@color/foreColor2"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="15sp"
        android:layout_marginLeft="95dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView4"
        />

    <Button
        android:layout_width="280dp"
        android:background="@animator/purplebutton"
        android:id="@+id/btnReg"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:padding="5dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:typeface="serif"
        android:text="Register"
        android:textSize="15sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />


</RelativeLayout>
